# scummvm

./: .clang-format  .clang-tidy  .cmake-format.yaml  .cvsignore  .editorconfig  .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  .indent.pro  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  2xsai.cpp  AGENTS.md  AI-GUIDELINES.md  ARCHITECTURE.md  AUTHORS  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  COPYING  COPYING.BSD  COPYING.FREEFONT  COPYING.ISC  COPYING.LGPL  COPYING.LUA  COPYING.MIT  COPYING.OFL  COPYING.TINYGL  COPYRIGHT  FILE_FORMATS.md  Info.plist  KNOWNISSUES  KNOWN_BUGS  Makefile  Makefile.common  Makefile.cross  Makefile.irix  Makefile.macosx  (+256 more)
audio/: CMakeLists.txt  adlib.cpp  adlib_ctmidi.cpp  adlib_ctmidi.h  adlib_hmisos.cpp  adlib_hmisos.h  adlib_ms.cpp  adlib_ms.h  alsa_opl.cpp  atari_ym2149.cpp  atari_ym2149.h  audiostream.cpp  audiostream.h  casio.cpp  casio.h  chip.cpp  chip.h  cms.cpp  cms.h  fmopl.cpp  fmopl.h  mac_plugin.cpp  mididrv.cpp  mididrv.h  mididrv_ms.cpp  mididrv_ms.h  midiparser.cpp  midiparser.h  midiparser_hmp.cpp  midiparser_hmp.h  midiparser_qt.cpp  midiparser_qt.h  midiparser_smf.cpp  midiparser_smf.h  midiparser_xmidi.cpp  midiplayer.cpp  midiplayer.h  miles.h  miles_adlib.cpp  miles_midi.cpp  (+29 more)
audio/decoders/: 3do.cpp  3do.h  aac.cpp  aac.h  ac3.cpp  ac3.h  adpcm.cpp  adpcm.h  adpcm_intern.h  aiff.cpp  aiff.h  apc.cpp  apc.h  asf.cpp  asf.h  codec.h  flac.cpp  flac.h  g711.cpp  g711.h  iff_sound.cpp  iff_sound.h  mac_snd.cpp  mac_snd.h  mp3.cpp  mp3.h  mpc.cpp  mpc.h  qdm2.cpp  qdm2.h  qdm2data.h  quicktime.cpp  quicktime.h  quicktime_intern.h  raw.cpp  raw.h  util.h  vag.cpp  vag.h  voc.cpp  (+14 more)
audio/mods/: desktoptracker.cpp  desktoptracker.h  impulsetracker.h  (+23 more)
backends/: CMakeLists.txt  base-backend.cpp  base-backend.h  base-subsys-audio.h  base-subsys-events.h  base-subsys-file.h  base-subsys-graphics.h  base-subsys-mutex.h  base-subsys-timer.h  intern.h  modular-backend.cpp  modular-backend.h  module.mk
common/: CMakeLists.txt  EventDispatcher.cpp  EventMapper.cpp  EventRecorder.cpp  EventRecorder.h  achievements.cpp  achievements.h  advancedDetector.cpp  advancedDetector.h  algorithm.h  archive.cpp  archive.h  array.h  assocarray.cpp  assocarray.h  atan2table.cpp  atan2table.h  base-str.cpp  base-str.h  base64.cpp  base64.h  bitarray.h  bitstream.cpp  bitstream.h  btea.cpp  btea.h  bufferedstream.h  c++11-compat.h  callback.h  clickteam.cpp  clickteam.h  cloudmanager.h  concatstream.cpp  concatstream.h  config-file.cpp  config-file.h  config-manager.cpp  config-manager.h  console.cpp  console.h  (+234 more)
devtools/: CMakeLists.txt  README  check-commit-msg.py  construct-pred-dict.pl  convbdf.c  convbdf.cpp  create_classicmacfonts.sh  create_japanesemacfonts.sh  credits.pl  credits.pl.in  decompress-diskcopy-image.py  director-generate-xobj-stub.py  dist-scummvm.sh  docker.sh  dumper-companion.pl  dumper-companion.py  encode-macbinary.sh  extract-words-tok.pl  gdb_pretty_printers.py  generate-android-i18n-strings.py  generate-appdata.py  generate-metainfo.py  gog_gameid.py  lldb_pretty_printers.py  make-fonts-archive.py  make-scumm-fontdata.c  make-scumm-fontdata.cpp  make-www-archive.py  make_class.py  md5table.c  md5table.cpp  module.mk  release-checks.sh  run_event_recorder_tests.py  scumm-md5.txt  steam_achievements.py  steam_achivements.py  steam_gameid.py  svnpropset.sh  themeparser.py  (+3 more)
graphics/: CMakeLists.txt  VectorRenderer.cpp  VectorRenderer.h  VectorRendererSpec.cpp  VectorRendererSpec.h  animation.cpp  animation.h  big5.cpp  big5.h  blit-alpha.cpp  blit-atari.cpp  blit-avx2.cpp  blit-neon.cpp  blit-scale.cpp  blit-sse2.cpp  blit.cpp  blit.h  color_quantizer.cpp  color_quantizer.h  colormasks.h  consolefont.cpp  conversion.cpp  conversion.h  cp949m.h  cursor.h  cursorman.cpp  cursorman.h  dirtyrects.cpp  dirtyrects.h  dither.cpp  dither.h  dxa_player.cpp  dxa_player.h  flic_player.cpp  flic_player.h  font.cpp  font.h  fontman.cpp  fontman.h  framelimiter.cpp  (+110 more)
gui/: Actions.cpp  Actions.h  CMakeLists.txt  EditTextWidget.cpp  EditTextWidget.h  EventRecorder.cpp  EventRecorder.h  GuiManager.cpp  GuiManager.h  InterfaceManager.cpp  InterfaceManager.h  Key.cpp  Key.h  KeysDialog.cpp  KeysDialog.h  ListWidget.cpp  ListWidget.h  MetadataParser.cpp  MetadataParser.h  PopUpWidget.cpp  PopUpWidget.h  ScrollBarWidget.cpp  ScrollBarWidget.h  TabWidget.cpp  TabWidget.h  ThemeClassic.cpp  ThemeClassic.h  ThemeData.cpp  ThemeData.h  ThemeDefaultXML.cpp  ThemeEngine.cpp  ThemeEngine.h  ThemeEval.cpp  ThemeEval.h  ThemeLayout.cpp  ThemeLayout.h  ThemeModern.cpp  ThemeModern.h  ThemeNew.cpp  ThemeParser.cpp  (+125 more)
image/: CMakeLists.txt  ani.cpp  ani.h  bmp.cpp  bmp.h  brc.cpp  brc.h  cel_3do.cpp  cel_3do.h  cicn.cpp  cicn.h  codec-options.h  gif.cpp  gif.h  icocur.cpp  icocur.h  iff.cpp  iff.h  image_decoder.h  jpeg.cpp  jpeg.h  module.mk  neo.cpp  neo.h  pcx.cpp  pcx.h  pict.cpp  pict.h  png.cpp  png.h  scr.cpp  scr.h  tga.cpp  tga.h  xbm.cpp  xbm.h
math/: CMakeLists.txt  aabb.cpp  aabb.h  angle.cpp  angle.h  cosinetables.cpp  cosinetables.h  dct.cpp  dct.h  fft.cpp  fft.h  frustum.cpp  frustum.h  glmath.cpp  glmath.h  line2d.cpp  line2d.h  line3d.cpp  line3d.h  mathfwd.h  matrix.h  matrix3.cpp  matrix3.h  matrix4.cpp  matrix4.h  mdct.cpp  mdct.h  module.mk  plane.cpp  plane.h  quat.cpp  quat.h  ray.cpp  ray.h  rdft.cpp  rdft.h  rect2d.cpp  rect2d.h  rotation3d.h  sinetables.cpp  (+13 more)
video/: 3do_decoder.cpp  3do_decoder.h  4xm_decoder.cpp  4xm_decoder.h  4xm_utils.cpp  4xm_utils.h  CMakeLists.txt  avi_decoder.cpp  avi_decoder.h  bink_decoder.cpp  bink_decoder.h  bink_decoder_seek.cpp  bink_decoder_seek.h  binkdata.h  coktel_decoder.cpp  coktel_decoder.h  dxa_decoder.cpp  dxa_decoder.h  flic_decoder.cpp  flic_decoder.h  hnm_decoder.cpp  hnm_decoder.h  mkv_decoder.cpp  mkv_decoder.h  module.mk  mpeg_player.cpp  mpeg_player.h  mpegps_decoder.cpp  mpegps_decoder.h  mve_decoder.cpp  mve_decoder.h  paco_decoder.cpp  paco_decoder.h  psx_decoder.cpp  psx_decoder.h  qt_data.h  qt_decoder.cpp  qt_decoder.h  qtvr_decoder.cpp  smk_decoder.cpp  (+9 more)
(+45052 files in other folders)
